# CS100--Labs

lab-01-git-github-johan1505/: README.md
lab-01-git-github-johan1505/main.cpp/: main.cpp
lab-02-unit-and-integration-testing-johan1505/: CMakeLists.txt  IGNORE.gitignore  README.md  c-echo.h  list.sh  main.cpp  test.cpp
lab-02-unit-and-integration-testing-johan1505/BASH_ARRAYS_AND_LOOPS/: array.sh
lab-02-unit-and-integration-testing-johan1505/HELLO/: hello.sh
lab-03-composite-pattern-ja_lab3/: CMakeLists.txt  README.md  base.hpp  main.cpp  mocks.hpp  mult.hpp  op.hpp  rand.hpp  sub.hpp  unit_test.cpp
lab-04-strategy-pattern-ja_lab4/: README.md  base.hpp  sort.hpp
lab-05-github-workflow-lab05_johan_adrian/: CMakeLists.txt  README.md  c-count.h  main.cpp  test.cpp
lab-06-decorator-pattern-lab6_johan_adrian/: CMakeLists.txt  Ceiling.hpp  Decorator.hpp  Floor.hpp  ListContainer.hpp  README.md  VectorContainer.cpp  container.cpp  op.hpp  sort.hpp  unit_test.cpp  unit_test2.cpp  unit_test3.cpp
lab-07-abstract-factory-pattern-lab7_johan_adrian/: Abs.hpp  BubbleSort.cpp  CMakeLists.txt  Ceil.hpp  Floor.hpp  InputOpMock.hpp  ListContainer.cpp  Paren.hpp  PrecisionOp.hpp  PrecisionRand.hpp  README.md  SciOp.hpp  ScientificFactory.hpp  SelectionSort.cpp  VectorContainer.hpp  base.hpp  op.hpp  unit_test3.cpp  unit_test4.cpp
lab-08-command-pattern-lab8_johan_adrian/: CMakeLists.txt  README.md
lab-08-command-pattern-lab8_johan_adrian/header/: Abs.hpp  BubbleSort.hpp  Decorator.hpp  DoubleFactory.hpp  Menu.hpp  MultCommand.hpp  PowCommand.hpp  PrecisionFactory.hpp  Trunc.hpp  add.hpp  div.hpp  pow.hpp  rand.hpp
lab-09-iterator-pattern-lab9_johan_adrian/: CMakeLists.txt  README.md
lab-09-iterator-pattern-lab9_johan_adrian/header/: Abs.hpp  AddCommand.hpp  BinaryIterator.hpp  Ceil.hpp  DivCommand.hpp  DummyRoot.hpp  Floor.hpp  InputOpMock.hpp  Iterator.hpp  Paren.hpp  PreorderIterator.hpp  SelectionSort.hpp  SubCommand.hpp  Trunc.hpp  add.hpp  base.hpp  base_factory.hpp  div.hpp  mult.hpp  op.hpp  pow.hpp  rand.hpp  sub.hpp
lab-09-iterator-pattern-lab9_johan_adrian/src/: ListContainer.cpp  container.cpp  main.cpp  unit_test3.cpp  unit_test4.cpp  unit_test6.cpp
lab-10-visitor-pattern-lab10_adrian_johan/: CMakeLists.txt  README.md
(+30 files in other folders)
